add link to symfony rest action

--- a/src/AppBundle/Resources/public/partials/demo2.html
+++ b/src/AppBundle/Resources/public/partials/demo2.html
@@ -3,7 +3,7 @@
         <h1>{{ some_variable }}</h1>
 
         <li ng-repeat="phone in phones">
-            <span>{{phone.name}}</span>
+            <span>{{phone}}</span>
 
         </li>
     </div>
