add another kind of form

--- a/src/AppBundle/Resources/public/partials/form_html.html
+++ b/src/AppBundle/Resources/public/partials/form_html.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="FormCtrl">
+<div class="row">
     <div class="col-md-9">
 
             <form ng-submit="submitForm()">
