--- a/src/AppBundle/Resources/views/Front/index.html.twig
+++ b/src/AppBundle/Resources/views/Front/index.html.twig
@@ -29,7 +29,10 @@
                             <a href="#/sample_array">get json array</a>
                         </li>
                         <li>
-                            <a href="#/form">sample form</a>
+                            <a href="#/form_html">sample form in html </a>
+                        </li>
+                        <li>
+                            <a href="#/form_symfony">sample form get form from controller from symfonyform </a>
                         </li>
                     </ul>
                 </div>
