fix symfony form

--- a/src/AppBundle/Resources/views/Front/index.html.twig
+++ b/src/AppBundle/Resources/views/Front/index.html.twig
@@ -32,7 +32,10 @@
                             <a href="#/form_html">sample form in html </a>
                         </li>
                         <li>
-                            <a href="#/form_symfony">sample form get form from controller from symfonyform </a>
+                            <a href="#/form_symfony_partial">render partial and get html in partial - doesnt work :/ </a>
+                        </li>
+                        <li>
+                            <a href="#/form_symfony_twig">sample form get form from controller from symfonyform located in twig </a>
                         </li>
                     </ul>
                 </div>
