--- a/src/AppBundle/Resources/views/Partial/test.html.twig
+++ b/src/AppBundle/Resources/views/Partial/test.html.twig
@@ -24,7 +24,7 @@
     <div class="col-md-3">
         <p>Debuging</p>
         <ul>
-            {#<li>{{form.firstName}} </li>#}
+            <li>{{ '{{form.firstName}}' }} </li>
             {#<li>{{form.lastName}}</li>#}
         </ul>
     </div>
