--- a/src/AppBundle/Resources/views/Partial/test2.html.twig
+++ b/src/AppBundle/Resources/views/Partial/test2.html.twig
@@ -5,7 +5,8 @@
 <input type="submit" value="Save" />
 </form>
 
-
+{{ '{{ hello }}' }}
+{{ '{{ hello2 }}' }}
 
 {# symfony form request and response #}
 
